feat: create model training pipeline

--- a/notebooks/text-classification-prototype.ipynb
+++ b/notebooks/text-classification-prototype.ipynb
@@ -352,17 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array([0, 1, 2, 3, 4]),\n",
-       " array([12520, 72876, 18525, 15167, 10840], dtype=int64))"
+       " array([12453, 72937, 18518, 15192, 10828], dtype=int64))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
     "# Data spliting\n",
     "\n",
     "def data_spliter(X, y, test_size, random_state):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=seed)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, stratify=y, random_state=seed)\n",
     "    return X_train, X_test, y_train, y_test\n",
     "\n",
     "X_train, X_test, y_train, y_test = data_spliter(X_clean, y_encoded, test_size, seed)\n",
@@ -564,17 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train_pred = pipeline.predict(X_train)\n",
+    "y_train_resampled_pred = pipeline.predict(X_train_resampled)\n",
     "y_test_pred = pipeline.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -583,10 +583,10 @@
      "text": [
       "Train metric report:\n",
       " {\n",
-      "    \"accuracy\": 0.7549,\n",
-      "    \"average_precision\": 0.7914,\n",
-      "    \"average_recall\": 0.7549,\n",
-      "    \"average_f1\": 0.7626\n",
+      "    \"accuracy\": 0.924,\n",
+      "    \"average_precision\": 0.9247,\n",
+      "    \"average_recall\": 0.924,\n",
+      "    \"average_f1\": 0.9241\n",
       "}\n",
       "Test metric report:\n",
       " {\n",
@@ -609,7 +609,7 @@
     "  report[\"average_f1\"] = round(f1_score(y_true, y_pred, average=\"weighted\"), ndigits)\n",
     "  return report\n",
     "\n",
-    "metrics_report_train = classifier_metrics_report_generator(y_train, y_train_pred)\n",
+    "metrics_report_train = classifier_metrics_report_generator(y_train_resampled_pred, y_train_resampled)\n",
     "metrics_report_test = classifier_metrics_report_generator(y_test, y_test_pred)\n",
     "\n",
     "print(\"Train metric report:\\n\", json.dumps(metrics_report_train, indent = 4))\n",
