refact: refact pred pipe to include text clean and log predictions

--- a/notebooks/text-classification-prototype.ipynb
+++ b/notebooks/text-classification-prototype.ipynb
@@ -6,21 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import pickle\n",
     "import re\n",
     "import unidecode\n",
-    "import json\n",
+    "\n",
     "\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "from sklearn.utils.class_weight import compute_class_weight"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.utils.class_weight import compute_class_weight\n",
+    "from typing import Callable\n",
+    "from xgboost import XGBClassifier"
    ]
   },
   {
@@ -57,7 +60,7 @@
     "# User parameters\n",
     "\n",
     "data_folder = os.path.join(os.getcwd(), \"data\", \"01_raw\")\n",
-    "data_file = \"complaints_processed.csv\"\n",
+    "data_file = \"complaints.csv\"\n",
     "\n",
     "test_size=0.2\n",
     "seed=0\n",
@@ -270,8 +273,26 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forwarded message date tue subject please investigate comenity bank retailer card scam sent hello name scammed comenity bank credit card provider company childrens place new york forever victoria secret original credit comenity bank lower limit began charge overage fee along late fee began pay close attention card find limit also changed well incurring overage late fee reached company comenity bank stated would change credit limit original limit reached told summit payment account corrected comenity bank credit card impacted credit score plummeted negative status im currently paying price due corruption affected detrimental way debt due company charging overage fee well late fee even initial credit limit fluctuating tremendously company charge major fee account willing correct account nervous said attorney reason im reaching im employee company ruining credit plz help name contact info thank\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.narrative[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "# Split data into X and y\n",
     "X = np.array(data.narrative)\n",
     "y = np.array(data.category)"
    ]
@@ -285,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +353,7 @@
        "array([0, 0, 4, 1, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +383,7 @@
        " array([12453, 72937, 18518, 15192, 10828], dtype=int64))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +411,7 @@
        "(array([0, 1, 2, 3, 4]), array([500, 500, 500, 500, 500], dtype=int64))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,11 +446,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create pipeline: vectorizer + classifier\n",
+    "# Create a text classification pipeline: vectorizer + classifier\n",
     "\n",
     "pipe_steps = []\n",
     "\n",
@@ -466,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -546,12 +567,14 @@
        "                               objective='multi:softprob', ...))])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Train the text classification pipeline\n",
+    "\n",
     "pipeline.fit(X_train_resampled, y_train_resampled)"
    ]
   },
@@ -564,17 +587,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Make predictions for train and test datasets\n",
+    "\n",
     "y_train_resampled_pred = pipeline.predict(X_train_resampled)\n",
     "y_test_pred = pipeline.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -583,23 +608,23 @@
      "text": [
       "Train metric report:\n",
       " {\n",
-      "    \"accuracy\": 0.924,\n",
-      "    \"average_precision\": 0.9247,\n",
-      "    \"average_recall\": 0.924,\n",
-      "    \"average_f1\": 0.9241\n",
+      "    \"accuracy\": 0.9172,\n",
+      "    \"average_precision\": 0.9178,\n",
+      "    \"average_recall\": 0.9172,\n",
+      "    \"average_f1\": 0.9173\n",
       "}\n",
       "Test metric report:\n",
       " {\n",
-      "    \"accuracy\": 0.7474,\n",
-      "    \"average_precision\": 0.7865,\n",
-      "    \"average_recall\": 0.7474,\n",
-      "    \"average_f1\": 0.7557\n",
+      "    \"accuracy\": 0.7527,\n",
+      "    \"average_precision\": 0.7885,\n",
+      "    \"average_recall\": 0.7527,\n",
+      "    \"average_f1\": 0.7606\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "# Compute metrics\n",
     "\n",
     "def classifier_metrics_report_generator(y_true, y_pred, ndigits=4):\n",
     "  report = {}\n",
@@ -625,16 +650,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'credit_reporting'"
+       "'credit_card'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,40 +673,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'category': 'credit_reporting', 'probability': 0.7116}"
+       "{'y_pred': 'mortgages_and_loans', 'y_proba': 0.9571526}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "class textClassPredictor():\n",
-    "    def __init__(self, tle, clf, ndigits: int = 4):\n",
-    "        self.tle = tle\n",
-    "        self.clf = clf\n",
-    "        self.ndigits = ndigits\n",
+    "# Create a class to make predictions easier\n",
+    "\n",
+    "class TextClassPredictor:\n",
+    "    \"\"\"Class to predict text category using trained models.\n",
+    "\n",
+    "    Args:\n",
+    "        text_cleaner: function to clean the text.\n",
+    "        target_encoder: pickle of the target label encoder.\n",
+    "        classfier: pickle of the classifier.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, text_cleaner: Callable, target_encoder: pickle, classfier: pickle):\n",
+    "        self.text_cleaner = text_cleaner\n",
+    "        self.target_encoder = target_encoder\n",
+    "        self.classfier = classfier\n",
     "\n",
     "    def predict(self, x: str):\n",
-    "        y_encoded = self.clf.predict([x])\n",
-    "        y = self.tle.inverse_transform(y_encoded)[0]\n",
-    "        y_proba = max(self.clf.predict_proba([x])[0])\n",
-    "        response = {'category': y, 'probability': round(y_proba, self.ndigits)}\n",
-    "        return  response\n",
+    "        \"\"\"Predict text category.\n",
     "\n",
-    "tcp = textClassPredictor(tle=tle, clf=pipeline)\n",
+    "        Args:\n",
+    "            x: text to classify its category - narrative\n",
     "\n",
-    "x_i = X_test[10]\n",
+    "        Returns:\n",
+    "            response: dictonary with predicted category and its probabiltiy.\n",
+    "        \"\"\"\n",
+    "        x_clean = self.text_cleaner([x])\n",
+    "        y_encoded = self.classfier.predict(x_clean)\n",
+    "        y_pred = self.target_encoder.inverse_transform(y_encoded)[0]\n",
+    "        y_proba = max(self.classfier.predict_proba([x])[0])\n",
+    "        response = {\"y_pred\": y_pred, \"y_proba\": y_proba}\n",
+    "        return response\n",
+    "\n",
+    "\n",
+    "tcp = TextClassPredictor(text_cleaner=text_cleaner, target_encoder=tle, classfier=pipeline)\n",
+    "\n",
+    "x_i = X_test[16]\n",
     "y_i = tcp.predict(x_i)\n",
     "y_i"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
